Actualicacion function combinados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos del Clima</title>
+    <title>Datos del Clima y Ubicación</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,15 +12,13 @@
 <body>
     <div id="result">
         <div id="weather-icon">
-            <div id="weather-icon__image">
-
-            </div>
-            <div id="weather-icon__title">
-
-            </div>
+            <div id="weather-icon__image"></div>
+            <div id="weather-icon__title"></div>
         </div>
         <div id="weather-details"></div>
     </div>
+
+    <div id="location-details"></div>
 
     <script src="script.js"></script>
 </body>
